Cabal-Version: >= 1.6
Build-Type: Simple
Name: torrent-diff
Version: 1.0.0
Synopsis: Torrent Differ
Description:
  Displays path differences between two torrent files.
License: OtherLicense
License-File: COPYING
Author: Philip Nilsson <pnilsson@nullref.se>
Maintainer: Philip Nilsson <pnilsson@nullref.se>

Source-Repository head
  Type: git
  Location: git://github.com/nullref/torrent-diff.git

Executable torrent-diff
  GHC-Options: -Wall
  Main-Is: TorrentDiff.hs
  Build-Depends:
    attoparsec,
    AttoBencode,
    base >= 4.6 && < 5,
    bytestring,
    containers >= 0.5,
    directory,
    system-filepath >= 0.4.1,
    unix
